--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-spreadsheet": "^3.1.15",
     "moment": "^2.29.1",
     "next": "^10.1.3",
+    "nodemailer": "^6.6.0",
     "postcss-import": "^14.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
