--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Carlos Meyer (Cadev.com.br)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "google-spreadsheet": "^3.1.15",
     "moment": "^2.29.1",
     "next": "^10.1.3",
@@ -19,6 +20,8 @@
     "postcss-import": "^14.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
+    "react-toastify": "^7.0.4",
     "swr": "^0.5.5"
   },
   "devDependencies": {
